--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,10 @@ ol {
   margin: 0;
   padding: 0;
 }
-img{
-  display:block;
+img {
+  display: block;
   max-width: 100%;
-   height: auto;
+  height: auto;
 }
 /* common */
 .container {
@@ -158,54 +158,7 @@ img{
 .section {
   padding: 120px 0;
 }
-.benefits-list {
-  display: flex;
-  gap: 24px;
-}
-
-.benefits-item {
-  width: calc((100% - 72px) / 4);
-}
-
-.team-list {
-  display: flex;
-  gap: 24px;
-}
-
-.team-item {
-  width: calc((100% - 72px) / 4);
-  border-radius: 0 0 4px 4px;
-}
-.team-wrapper {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap:48px;
-}
-.portfolio-item {
-  width: calc((100% - 48px) / 3);
-  
-}
-.portfolio-wrapper {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-.team-title,
-.portfolio-title {
-  margin-bottom: 72px;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  text-transform: capitalize;
-}
-
+/* benefits */
 .subtitles {
   margin-bottom: 8px;
   font-weight: 500;
@@ -219,17 +172,66 @@ img{
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.benefits-list {
+  display: flex;
+  gap: 24px;
+}
 
+.benefits-item {
+  width: calc((100% - 72px) / 4);
+}
+/* team */
+.team-title,
+.portfolio-title {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+}
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-item {
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
+}
+.team-wrapper {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .team-subtitle,
 .team-text {
   text-align: center;
 }
+
 .team {
   background: #f4f4fd;
 }
+
 .team-item {
   background-color: #fff;
 }
+/* portfolio */
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-wrapper {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 /* footer */
 .page-footer {
   background-color: #2e2f42;
