--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ img {
 /* header */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -88,9 +91,12 @@ img {
     height: 4px;
     background-color: #404bbf;
     position: absolute;
+    bottom: -1px;
 }
 .current{
+  color: #404bbf;
   position: relative;
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -102,6 +108,9 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
+}
+.contacts-item{
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-link {
   display: block;
@@ -155,6 +164,7 @@ img {
   border-radius: 4px;
   min-width: 169px;
   height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-button:hover,
 .order-button:focus {
@@ -304,6 +314,7 @@ img {
     display: flex;
     align-items: center;
       justify-content: center;
+      margin-bottom: 8px;
     
 }
 .benefits-icon {
