--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ img {
 .current{
   color: #404bbf;
   position: relative;
-  
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -108,6 +108,7 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-item{
   
@@ -164,7 +165,7 @@ img {
   border-radius: 4px;
   min-width: 169px;
   height: 56px;
-  
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-button:hover,
 .order-button:focus {
@@ -274,7 +275,7 @@ img {
 
 .team-soc-icon {
   fill:#f4f4fd;
-}
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 /* portfolio */
 .portfolio-list {
   display: flex;
@@ -349,7 +350,7 @@ margin-right: 120px;
 .footer-soc-list {
   display: flex;
     gap: 16px;
-    
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-item {}
