--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,7 @@ img {
 .page-header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -82,22 +81,22 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-}
-.current::after{
-  content: '';
-  display: block;
-  border-radius: 2px;
-    width: 48px;
-    height: 4px;
-    background-color: #404bbf;
-    position: absolute;
-    bottom: -1px;
-}
-.current{
-  color: #404bbf;
-  position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+}
+.nav-link.current {
+  position: relative;
+}
+
+.nav-link.current::after {
+  content: '';
+
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
 
 .contacts {
@@ -108,10 +107,9 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts-item{
   
+}
+.contacts-item {
 }
 .contacts-link {
   display: block;
@@ -120,11 +118,13 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:focus,
+.nav-link.current {
   color: #404bbf;
 }
 /* order */
@@ -132,7 +132,11 @@ img {
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -165,7 +169,7 @@ img {
   border-radius: 4px;
   min-width: 169px;
   height: 56px;
- transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-button:hover,
 .order-button:focus {
@@ -229,8 +233,7 @@ img {
 .team-item {
   width: calc((100% - 72px) / 4);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0 0 4px 4px;
 }
 .team-wrapper {
@@ -241,7 +244,7 @@ img {
 .team-text {
   text-align: center;
 }
-.team-text{
+.team-text {
   margin-bottom: 8px;
 }
 .team {
@@ -257,7 +260,8 @@ img {
   justify-content: center;
 }
 
-.team-soc-item {}
+.team-soc-item {
+}
 
 .team-soc-link {
   width: 40px;
@@ -267,15 +271,17 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-soc-link:hover,
-.team-soc-link:focus{
+.team-soc-link:focus {
   background-color: #404bbf;
 }
 
 .team-soc-icon {
-  fill:#f4f4fd;
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+  fill: #f4f4fd;
+  
+}
 /* portfolio */
 .portfolio-list {
   display: flex;
@@ -296,7 +302,6 @@ img {
 .page-footer {
   background-color: #2e2f42;
   padding: 100px 0;
- 
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
@@ -317,59 +322,58 @@ img {
   height: 112px;
   background-color: #f4f4fd;
   border: 1px solid #8e8f99;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-      justify-content: center;
-      margin-bottom: 8px;
-    
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
 }
 .benefits-icon {
-  
 }
-.footer-container{
-display: flex;
-align-items: baseline;
+.footer-container {
+  display: flex;
+  align-items: baseline;
 }
-  .footer-space{
-margin-right: 120px;
-  }
-.footer-box{
-  
+.footer-space {
+  margin-right: 120px;
+}
+.footer-box {
 }
 .footer-desc {
-  
-    font-weight: 500;
-    
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #fff;
-    margin-bottom: 16px;
+  font-weight: 500;
+
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
 }
 
 .footer-soc-list {
   display: flex;
-    gap: 16px;
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  gap: 16px;
+  
 }
 
-.footer-soc-item {}
+.footer-soc-item {
+}
 
 .footer-soc-link {
   width: 40px;
-    height: 40px;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-soc-icon{
-  fill:#f4f4fd;
+.footer-soc-icon {
+  fill: #f4f4fd;
 }
 
-.footer-soc-icon {}
+.footer-soc-icon {
+}
 .footer-soc-link:hover,
-.footer-soc-link:focus{
-  background-color:#31d0aa;
+.footer-soc-link:focus {
+  background-color: #31d0aa;
 }
