--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ img {
   gap: 40px;
 }
 .nav-link {
+  position: relative;
   display: block;
   padding: 24px 0;
   font-weight: 500;
@@ -83,11 +84,9 @@ img {
   color: #2e2f42;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-link.current {
-  position: relative;
-}
 
-.nav-link.current::after {
+
+.nav-link::after {
   content: '';
 
   border-radius: 2px;
@@ -97,6 +96,15 @@ img {
   position: absolute;
   left: 0;
   bottom: -1px;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover::after,
+.nav-link:focus::after,
+.nav-link.current::after
+{
+  opacity: 1;
 }
 
 .contacts {
