--- a/css/styles.css
+++ b/css/styles.css
@@ -481,3 +481,19 @@ color:#2e2f42;
     color: #2e2f42;
     margin-bottom: 18px;
 }
+.modal-input{
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color:transparent;
+    padding-left: 38px;
+}
+.modal-label{
+  display: inline-block;
+  margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
